tests/compError/addString.ucl
// compError
// error: expected type Number, but got type String
// line:7 -> on right of '+' operator
// error: expected type Number, but got type String
// line:8 -> on left of '+' operator

1 + ""
"" + 2